envoy-scaling-experiment/yaml/navigator.yaml
# kubetpl:syntax:$
---
apiVersion: v1
kind: ServiceAccount
metadata:
    name: navigator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: navigator
  name: navigator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navigator
  strategy: {}
  template:
    metadata:
      labels:
        app: navigator
    spec:
      serviceAccountName: navigator
      containers:
      - image: gcr.io/cf-routing-desserts/navigator:latest
        name: navigator
        resources: {}
        env:
          - name: XDS_PORT
            value: "8080"
          - name: HTTP_PORT
            value: "8081"
          - name: SERVICE_HOSTNAME_FORMAT
            value: "httpbin-%d.default.svc.cluster.local"
          - name: SERVICE_PORT
            value: "8000"
          - name: JAEGER_AGENT_HOST
            value: "jaeger-agent"
          - name: JAEGER_AGENT_PORT
            value: "6831"
        ports:
          - containerPort: 8080
            name: grpc
            protocol: TCP
          - containerPort: 8081
            name: http
            protocol: TCP
      tolerations:
        - key: "scalers.cp"
          operator: "Equal"
          value: "dedicated"
          effect: "NoSchedule"
      # nodeSelector:
      #   scalers.cp: dedicated
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels: { "app": "navigator" }
            topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: navigator
  name: navigator
spec:
  ports:
  - name: grpc
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: navigator
  type: ClusterIP
