envoy-scaling-experiment/yaml/whoami.yaml
# kubetpl:syntax:$

# kubetpl:set:NAMESPACE=default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $NAME
  namespace: $NAMESPACE
  labels:
    app: $NAME
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 10
      maxSurge: 10
  selector:
    matchLabels:
      app: $NAME
      version: v1
  template:
    metadata:
      labels:
        app: $NAME
        version: v1
    spec:
      containers:
      - image: docker.io/containous/whoami
        imagePullPolicy: IfNotPresent
        name: $NAME
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            # when "host" is not defined, "PodIP" will be used
            # host: my-host
            # when "scheme" is not defined, "HTTP" scheme will be used. Only "HTTP" and "HTTPS" are allowed
            # scheme: HTTPS
            path: /health
            port: 80
          initialDelaySeconds: 1
          timeoutSeconds: 1
        # resources:
        #   requests:
        #     memory: 32Mi
        #     cpu: 50m
        #   limits:
        #     memory: 32Mi
        #     cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: $NAME
  namespace: $NAMESPACE
  labels:
    app: $NAME
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: $NAME
